add api support

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,5 +1,11 @@
 {% extends 'base.html' %}
 
 {% block content %}
-    <h1>Hello</h1>
+
 {% endblock %}
+{#                Temperature: {{ api.main.temp }}°C<br>#}
+{#                Feels Like: {{ api.main.feels_like }}°C<br>#}
+{#                Pressure: {{ api.main.pressure }}<br>#}
+{#                Humidity: {{ api.main.humidity }}%<br>#}
+{#                Wind: {{ api.wind.speed }}km/h?<br>#}
+{#                Description: {{ api.weather.0.description }}#}
