--- a/templates/base.html
+++ b/templates/base.html
@@ -19,8 +19,9 @@
               <a class="nav-link" href="{% url 'about' %}">About</a>
             </li>
           </ul>
-          <form class="d-flex" role="search">
-            <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+          <form action="{% url 'index' %}" class="d-flex" role="search" method="POST">
+              {% csrf_token %}
+            <input class="form-control me-2" type="search" placeholder="Enter city" aria-label="Search" name="city">
             <button class="btn btn-outline-success" type="submit">Search</button>
           </form>
         </div>
