--- a/templates/index.html
+++ b/templates/index.html
@@ -9,16 +9,18 @@
 
             <div class="d-flex justify-content-center align-items-center" style="min-height: 100vh;">
                 <div class="jumbotron" style="background-color: #ebebeb; width: 50%; padding: 3rem;">
-                  <h1 class="display-4">{{ city }}</h1>
-                  <p class="lead">Placeholder.</p>
+                  <h1 class="display-4"><a><img src="https://openweathermap.org/img/wn/{{ api.weather.0.icon }}@2x.png" alt="Weather Icon"></a><strong>{{ city }}</strong>, <span class="fs-1">{{ api.main.temp }}°C</span></h1>
                   <hr class="my-4">
-                  <p>
-                      Temperature: {{ api.main.temp }}°C<br>
-                      Feels Like: {{ api.main.feels_like }}°C<br>
-                      Pressure: {{ api.main.pressure }}<br>
-                      Humidity: {{ api.main.humidity }}%<br>
-                      Wind: {{ api.wind.speed }}m/s<br>
+                  <p class="lead">
+                  {{ category_description }}
+                  <hr class="my-4">
                   </p>
+                    <div class="lead row">
+                        <div class="col-md-4 " style="background-color: lightblue; width: 25%; padding: 3rem; display: flex; justify-content: center; align-items: center; text-align: center;">Feels Like: {{ api.main.feels_like }}°C</div>
+                        <div class="col-md-4" style="background-color: lightcoral; width: 25%; padding: 3rem; display: flex; justify-content: center; align-items: center; text-align: center;">Pressure: {{ api.main.pressure }}</div>
+                        <div class="col-md-4" style="background-color: lightcyan; width: 25%; padding: 3rem; display: flex; justify-content: center; align-items: center; text-align: center;">Humidity: {{ api.main.humidity }}%</div>
+                        <div class="col-md-4" style="background-color: lightgreen; width: 25%; padding: 3rem; display: flex; justify-content: center; align-items: center; text-align: center;">Wind: {{ api.wind.speed }}m/s</div>
+                    </div>
                 </div>
             </div>
 
@@ -26,21 +28,3 @@
     {% endif %}
 
 {% endblock %}
-{#                Temperature: {{ api.main.temp }}°C<br>#}
-{#                Feels Like: {{ api.main.feels_like }}°C<br>#}
-{#                Pressure: {{ api.main.pressure }}<br>#}
-{#                Humidity: {{ api.main.humidity }}%<br>#}
-{#                Wind: {{ api.wind.speed }}km/h?<br>#}
-{#                Description: {{ api.weather.0.description }}#}
-
-
-
-{#clear sky#}
-{#few clouds#}
-{#scattered clouds#}
-{#broken clouds#}
-{#shower rain#}
-{#rain#}
-{#thunderstorm#}
-{#snow#}
-{#mist#}
